# CStreamIO

./: .cproject  .project  CMakeLists.txt  README.md
include/: ASCII.h  BufferTooSmallException.h  ByteBuffer.h  Charsets.h  GBK.h  MemoryInputStream.h  TextReader.h  TextWriter.h  UTF8.h
src/: ASCII.cpp  Charsets.cpp  GBK.cpp  MemoryInputStream.cpp  TextReader.cpp  TextWriter.cpp  UTF8.cpp  gbk_coding_data.cpp
unittests/: ASCIITest.cpp  CMakeLists.txt  MemoryInputStreamTest.cpp  TextWriterTest.cpp  UTF8Test.cpp
